--- a/fooApp/templates/product/common.html
+++ b/fooApp/templates/product/common.html
@@ -1,3 +1,15 @@
+{% macro edit_field(field, catch_kwargs=true) %}
+  <div class="control-group{% if field.errors %} error{% endif %}">
+    {{ field.label(class="control-label") }}
+  <div class="controls">
+    {{ field(**kwargs) }}
+    {% for error in field.errors %}
+     <span class="help-inline">{{ error }}</span>
+    {% endfor %}
+  </div>
+  </div>
+{% endmacro %}
+
 {% macro detail(product,
       link_title=false,
       show_edit=true,
